# Gomoku-AI

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.codex/environments/: environment.toml
docs/: algorithm-versions.md  evaluation-results.md  performance-notes.md
gomoku_ai/: __init__.py  ai.py  cli.py  core.py  evaluate.py  game.py  gui.py  players.py  rust_backend.py  tui.py
src/: lib.rs  main.rs
tests/: test_ai.py  test_cli.py  test_core.py  test_evaluate.py  test_game.py  test_gui.py  test_players.py  test_tui.py
