[project]
name = "gomoku-ai"
version = "0.1.0"
description = "A Gomoku game with plain CLI, TUI, GUI, and alpha-beta AI players."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
gomoku = "gomoku_ai.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
